--- a/style.css
+++ b/style.css
@@ -90,3 +90,30 @@ body {
     margin:0 auto;
     color: #FFFDD0;
 }
+
+#playerselect {
+    position: absolute;
+    bottom: 1%;
+    right: 6%;
+    z-index: 9;
+}
+
+.player {
+    background-color: #FFFDD0;
+    border-radius: 50%;
+    margin-bottom: 10px;
+    width: 37px;
+    height: 37px;
+    padding: 5px;
+    box-shadow: 0 3px 10px #000;
+    transition: transform .5s linear;
+}
+
+.player:hover {
+    transform: scale(1.2);
+}
+
+.player img {
+    width: 100%;
+    pointer-events: none;
+}
