pushed player selector up

--- a/style.css
+++ b/style.css
@@ -93,9 +93,10 @@ body {
 
 #playerselect {
     position: absolute;
-    bottom: 1%;
+    bottom: 3%;
     right: 6%;
     z-index: 9;
+    padding-bottom: env(safe-area-inset-bottom);
 }
 
 .player {
